WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310889
Fix aliasing bugs in Vector::fill() and Vector::insertFill()
https://bugs.webkit.org/show_bug.cgi?id=310889
Summary
Fix aliasing bugs in Vector::fill() and Vector::insertFill()
Chris Dumez
Reported
2026-03-27 06:16:04 PDT
Fix aliasing bugs in Vector::fill() and Vector::insertFill()
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-27 06:19:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61491
EWS
Comment 2
2026-03-27 18:49:45 PDT
Committed
310131@main
(80119b4639d5): <
https://commits.webkit.org/310131@main
> Reviewed commits have been landed. Closing PR #61491 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-27 18:50:14 PDT
<
rdar://problem/173555881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug